# abra_lang

./: .gitignore  README.md  build.sbt  main.ll  minds.md
abra_v1/grammar/: build.sh
abra_v1/tl_research/: anon_types.abra  arrays.abra  collections.abra  dsl.abra  error_handle.abra  exception_handle.abra  import_syntax.abra  modules.abra  nbody.abra  ptr_model.abra  tree.abra  type_union.abra  vs_nim.abra  vs_rust.abra  vs_rust2.abra
abra_v2/benchmark/bench/: CMakeLists.txt  one_example.cpp  one_example_bench.cpp  some.cpp  some.h
abra_v2/c/: a.out  opt.ll  virtual_sizes.c  virtual_sizes.ll
alloc/: make.sh  research.c  rs
antlr/: Hello.g4  abraFnDef.abra  build.sh  expr_test.sh  fndef.abra  test_fndef.sh
docs/: call_rules.dot
ex_handle/: .#local_unwind.c  a.out  cxx.abra  cxx.c  cxx.cpp  cxx.s  fake3.c  local_unwind.c  local_unwind.ll  local_unwind.s  main.c  main.orig.ll  main.orig.s  main.s  main2.c  main2.s  main3.c  main3.s  main4.c  main4.s  main5.2.ll  main5.2.s  main5.c  main5.ll  main5.s  obj.c  reorder.c  reorder.ll  reorder.s  test.c
grammar/: M2Lexer.g4  M2Parser.g4  expr1.abra  fnExp.abra  ifelse.abra  llinline.abra  m2.abra  test.sh  types.abra  unary.abra  while.abra
tl/: arrays.abra  fnpointer.abra  hw  hw.abra  m2.abra  main.tl  test1.abra  test2.abra  test3.abra  test4.abra  test5.abra  test6.abra  test7.abra  test8.abra
tl_research/: arrays.abra  error_handle.abra  m3.abra  mSome.abra  nbody.abra  pattern_matching.abra  pattern_matching_simple.abra  pg_example.abra  type_union.abra  vs_rust.abra
v3/: v3_completion_plan.todo
(+704 files in other folders)
